# agentic_ai

./: README.md  main.py  pyproject.toml
app/: endpoint.py
